[package]
name = "rcss-macros"
version = "0.1.0"
edition = "2018"
authors = ["Elliott Clarke <ecclarke42@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/ecclarke42/rcss"
description = "Macros for `rcss`"

[lib]
proc-macro = true

[dependencies]
heck = "0.3"
syn = { version = "1", features = ["full", "extra-traits"]}
quote = "1"
proc-macro2 = "1"
